# freetype-bf

./: .gitignore  .gitmodules  BeefProj.toml  CMakeLists.txt  build.bat  build_freetype.bat
src/: Config.bf  Enums.bf  Functions.bf  Types.bf
submodules/: CMakeLists.txt
